@@ -392,12 +392,18 @@ limited_railroads_work_like_fast_roads = false
 ;   To limit tiles to 5 land and sea units but 10 air units: limit_units_per_tile = [5 5 10]
 ;   To limit only air units to 10 per tile: limit_units_per_tile = [false false 10]
 ;   To have no limit (as in the standard game rules): limit_units_per_tile = false
-; NOTE: You can exclude tiles with cities from the limit by toggling the option below.
+; NOTE: The two options below let you exclude cities or certain unit types from the limit.
 limit_units_per_tile = false
 
 ; Allows an unlimited number of units to occupy tiles with cities when the unit limit is in force. When the limit (option above) is deactivated, this
 ; option does nothing.
 exclude_cities_from_units_per_tile_limit = false
+
+; Allows certain unit types to be exempt from the stack limit. Units of these types will not be stopped by the limit and will not count toward it
+; (will not stop others). This option is a space separated list of unit type names. Multi-word names must be wrapped in quotes. For example:
+;   [Worker Settler Flak "Mobile SAM"]
+; This option does nothing if limit_units_per_tile is set to false.
+exclude_types_from_units_per_tile_limit = []
 
 enable_free_buildings_from_small_wonders = true
 allow_stealth_attack_against_single_unit = false
