@@ -7,6 +7,7 @@
   - Option named unit_cycle_search_criteria
 - Can specify a victory animation for air units in aircraft_victory_animation option
 - If any unit types are listed in limit_defensive_retreat_on_water_to_types option, only those will be allowed to defensively retreat on water
+- Any unit types listed in exclude_types_from_units_per_tile_limit will be exempted from the stack limit and not count toward it
 - Option show_armies_performing_defensive_bombard that fixes defensive bombard animations being skipped when the bombarding unit is in an army
 - aggressively_penalize_bankruptcy now alternates between selling buildings or disbanding units first for bankrupt AI players and every third turn cuts their research spending
 - Fix crash caused by failure to find default option for popup asking player to select new build in city that completed its previous one
